--- a/CargadosTrucking/CargadosTrucking/CapturarFotografia.xaml
+++ b/CargadosTrucking/CargadosTrucking/CapturarFotografia.xaml
@@ -2,44 +2,100 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:ff="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms" xmlns:imageeditor="clr-namespace:Syncfusion.SfImageEditor.XForms;assembly=Syncfusion.SfImageEditor.XForms"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:ff="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms" xmlns:imageeditor="clr-namespace:Syncfusion.SfImageEditor.XForms;assembly=Syncfusion.SfImageEditor.XForms" xmlns:models="clr-namespace:CargadosTrucking.CustomView"
              mc:Ignorable="d"
              Style="{StaticResource Mainpage}"
              x:Class="CargadosTrucking.CapturarFotografia">
     <ContentPage.Content>
-        <Grid Margin="20,20,20,20">
-            <Grid.RowDefinitions  >
-                <RowDefinition Height="35" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="35" />
-
-
-            </Grid.RowDefinitions>
-            <Label Grid.Row="0" Text="Asociar Fotografia" FontSize="Large" FontAttributes="Bold" HorizontalOptions="CenterAndExpand" TextColor="#191F2D"/>
-            <Button Grid.Row="0" HorizontalOptions="EndAndExpand" Command="{Binding TomarFoto}" ImageSource="camera.png" BackgroundColor="#FF773D" WidthRequest="50" HeightRequest="50" BorderRadius="20"/>
-            <imageeditor:SfImageEditor x:Name="Editorfoto" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Grid.Row="1" Source="{Binding CurrentImage,Converter={StaticResource convertimage}}" >
-                
-            </imageeditor:SfImageEditor>
-
-            <!--
+        <StackLayout Margin="20,20,20,20">
             <ff:CachedImage x:Name  = "photoselected" 
                 LoadingPlaceholder   = "album.png"
                                 
                 ErrorPlaceholder     = "Error"
-              VerticalOptions="CenterAndExpand"
+                HeightRequest        = "120"
                 CacheDuration        = "30"
                 RetryCount           = "3"
                 RetryDelay           = "450"             
-                Source="{Binding CurrentImage,Converter={StaticResource convertimage}}"
+                Source="LogoJIB"
                 DownsampleToViewSize = "true">
 
-            </ff:CachedImage>-->
-            <StackLayout Grid.Row="2" Orientation="Horizontal" HorizontalOptions="EndAndExpand">
-                <Button BackgroundColor="#354883" Clicked="cerrarforma" VerticalOptions="EndAndExpand" Text="Cancelar"/>
-                <Button BackgroundColor="{StaticResource orangemain}" Clicked="AceptarFoto" VerticalOptions="EndAndExpand" Text="Guardar y asociar"/>
+            </ff:CachedImage>
+            <Label Text="Trip Information" FontAttributes="Bold" TextColor="#191F2D" HorizontalOptions="Center" FontSize="Large"/>
+            <StackLayout Orientation="Horizontal">
+                <StackLayout>
+                    <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
+                    <Label  Text="Driver" TextColor="#354883" FontAttributes="Bold"/>
+                    <Label Text="{Binding DriverName}" TextColor="#5aa755"/>
+                </StackLayout>
+                <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand">
+                    <Label  Text="WorkOrder" TextColor="#354883" FontAttributes="Bold"/>
+                    <Label Text="{Binding WrokOrder}" TextColor="#5aa755"/>
+                </StackLayout>
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="{Binding Modelo}" TextColor="#5aa755"/>
+                    <Label Padding="0,0,0,0"   TextColor="Gray" Text="{Binding VIM,Converter={d:StaticResource vimhelper}}"/>
+                    </StackLayout>
+                </StackLayout>
+            <Button HorizontalOptions="EndAndExpand" Command="{Binding TomarFoto}" VerticalOptions="Center" ImageSource="camera.png" BackgroundColor="#FF773D" WidthRequest="40" HeightRequest="40" BorderRadius="40"/>
 
             </StackLayout>
 
-        </Grid>
+            <models:InfiniteListView 
+                              x:Name="ListaTiendas"
+                              ItemsSource="{Binding ImagesList}"
+                              VerticalOptions="FillAndExpand"
+                              HasUnevenRows="True" 
+                              IsVisible="{Binding Eventosexisten}"
+                              BackgroundColor="{StaticResource blanco}"
+                              IsPullToRefreshEnabled="False"
+                              IsGroupingEnabled="False"
+                             SeparatorColor="Transparent"
+                            
+                              SelectionMode="None"
+                             
+                              IsRefreshing="{Binding IsBusy,Mode=OneWay}"
+                              >
+                <x:Arguments>
+                    <ListViewCachingStrategy>RecycleElement</ListViewCachingStrategy>
+                </x:Arguments>
+                <ListView.Header>
+                    <Frame Padding="0,0,0,0" CornerRadius="20">
+                        <StackLayout  BackgroundColor="#354883"  Orientation="Horizontal">
+                            <Label Margin="8,8,5,8" Text="Selected Pictures"
+               TextColor="White"
+              />
+                        </StackLayout>
+                    </Frame>
+                </ListView.Header>
+                <models:InfiniteListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <Frame Padding="0,0,0,0" Margin="0,5,0,5"  HasShadow="True" CornerRadius="10">
+
+                                <StackLayout  BackgroundColor="{StaticResource blanco}"  Orientation="Horizontal">
+                                    <ff:CachedImage HorizontalOptions="CenterAndExpand" x:Name  = "photoselected" 
+                                    LoadingPlaceholder   = "album.png"
+                                
+                                    ErrorPlaceholder     = "Error"
+                                    HeightRequest        = "100"
+                                    CacheDuration        = "30"
+                                    RetryCount           = "3"
+                                    RetryDelay           = "450"             
+                                    Source="{Binding Foto,Converter={StaticResource convertimage}}"
+                                    DownsampleToViewSize = "true">
+
+                                    </ff:CachedImage>
+                                   <!--- <Label Margin="5,8,5,8" Text="{Binding FotoNombre}" TextColor="#354883"/>-->
+                                    <Button Text="X" TextColor="White" BackgroundColor="Red" WidthRequest="45" HeightRequest="45" VerticalOptions="StartAndExpand" Clicked="removerfoto" HorizontalOptions="EndAndExpand"/>
+                                </StackLayout>
+
+                            </Frame>
+                        </ViewCell>
+                    </DataTemplate>
+                </models:InfiniteListView.ItemTemplate>
+            </models:InfiniteListView>
+            <Button x:Name="finalizarbutton" BackgroundColor="#354883" Clicked="finalizartrip" VerticalOptions="EndAndExpand" Text="Save"/>
+        </StackLayout>
+
     </ContentPage.Content>
 </ContentPage>
