--- a/CargadosTrucking/CargadosTrucking/StyleResources.xaml
+++ b/CargadosTrucking/CargadosTrucking/StyleResources.xaml
@@ -15,10 +15,12 @@
     <Color x:Key="NavigationPrimary">#2196F3</Color>
     <Color x:Key="colorAccent">#51b0ad</Color>
     <Color x:Key="orangemain">#FF773D</Color>
+    <Color x:Key="amarillo">#ffffe2</Color>
 
     <helpers:BoolConverter x:Key="convertbool" />
     <helpers:ByteArrayToImageSourceConverter x:Key="convertimage" />
     <helpers:VimHelper x:Key="vimhelper" />
+    <helpers:Photosexistinorderconverter x:Key="photoexistsview" />
 
 
     <Style TargetType="NavigationPage">
